array.island.Island.scala.error
Compilation error:
Island:9: error: identifier expected but '(' found.
    if (num.(i) != num.(i+1)) {
            ^Island:9: error: identifier expected but '(' found.
    if (num.(i) != num.(i+1)) {
                       ^Island:15: error: ';' expected but 'return' found.
  } return altSeq
    ^